fix: ensure header not hidden by address bar on mobile

--- a/main/src/resources/doc/styles.css
+++ b/main/src/resources/doc/styles.css
@@ -153,7 +153,8 @@
 
 /* BEGIN RESET */
 html, body {
-    height: 100vh;
+    height: 100dvh;
+    width: 100dvw;
     overflow-y: hidden;
     margin: 0;
     padding: 0;
